--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
+cmake_minimum_required(VERSION 3.8)
+
+find_package(Clang REQUIRED)
+
 add_subdirectory(find-decl)
 add_subdirectory(find-vec)
-
-if(CLANG_ENABLE_STATIC_ANALYZER)
-add_subdirectory(unittests)
-endif()
